Very first cut.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,267 @@
-Hello World
+<!doctype html>
+<html>
+<head>
+
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+<link href="http://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+	
+<meta charset="UTF-8">
+<title>Sunil Hadap</title>
+<link href="main.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>	
+
+<div class="header">
+	<br>
+	<table width="100%" border="0" cellpadding="0px">
+	  <tbody>
+		<tr>
+			<td width="100px"></td>
+		  <td><img id="mugshot" src="me.jpeg" width="200px" alt=""/></td>
+		  <td>
+
+			  <h1>Sunil Hadap</h1>
+
+			  <p>Principal Scientist, Adobe, San Jose, CA<br>
+			  CG, CV, AI - Researcher, Practitionar</p>
+
+			  <p><table  cellspacing="0" cellpadding="0"><tr><td>sunilhadap</td><td>@</td><td>gmail</td><td>.</td><td>com</td></tr></table></p>
+
+			  <table id="social-table">
+				  <tbody>
+					  <tr>
+						  <td>
+							  <img src="https://png.icons8.com/ios-glyphs/50/000000/graduation-cap.png" height="24px">
+						  </td>
+						  <td>
+							  &nbsp; <img src="https://png.icons8.com/ios/50/000000/linkedin-filled.png" height="24px">
+						  </td>
+						  <td>
+							<img src="https://png.icons8.com/ios-glyphs/50/000000/parse-from-clipboard.png" height="24px">
+						  </td>
+					  </tr>
+				  </tbody>
+			  </table>
+			</td>
+		</tr>
+	  </tbody>
+	</table>
+	<br>
+</div>
+
+<div class="section">
+<h2>Education</h2>
+	<ul>
+		<li>PhD, Computer Science, MIRALab, CUI, University of Geneva, Switzerland, 2003</li>
+		<li>Master of Design, Industrial Design, Indian Institute of Technology, Bombay, India, 1995</li>
+		<li>Bachelor of Technology, Aerospace Engineering, Indian Institute of Technology, Bombay, India, 1993</li>
+	</ul>
+</div>
+
+<div class="section">
+<h2>Professional Experience</h2>
+	<ul>
+		<li>Principal Scientist, Adobe Dec 2015 – till date<br>
+			Senior Research Scientist, Adobe Nov 2006 – Nov 2015<br>
+			Senior Research Manager (Emerging Graphics Technology Group), Adobe Aug 2007 – Aug 2012</li>
+		<li>R&amp;D Staff – simulation, PDI/DreamWorks, USA, Feb 2003 – Oct 2006</li>
+		<li>Research Assistant (MESH Project), MIRALab, University of Geneva, Jan 2000 – Jan 2003<br>
+			Research Scientist (Unilever Project), MIRALab, University of Geneva, Jan 2000 – Dec 2001</li>
+		<li>Project Leader, Tata Elxsi (India) Ltd., Bangalore, India, Nov 1996 – Jul 1998<br>
+			Senior Engineer (Systems Solution, VR), Tata Elxsi (India) Ltd., Bangalore, India, Sep 1995 – Oct 1996</li>
+	</ul>	
+</div>
+
+<div class="section">
+<h2>Credits</h2>
+	<ul>
+	<li>Shrek2, PDI/DreamWorks, 2004</li>
+	<li>Madagascar, PDI/DreamWorks, 2005</li>
+	<li>Over the Hedge, DreamWorks Animation, 2006</li>
+	<li>Shrek The Third, PDI/DreamWorks, 2007</li>
+	<li>Bee Movie, DreamWorks Animation, 2007</li>
+	<li>Adobe Photoshop (multiple)</li>
+	<li>Adobe Illustrator (multiple)</li>
+	<li>Adobe Photoshop Express, Adobe Photoshop Elements (multiple)</li>
+	<li>Adobe Dimension 2017</li>
+	</ul>
+</div>
+	
+<div class="section">
+<h2>Publications <img src="https://png.icons8.com/color/50/000000/under-construction.png" width="36px"></h2>
+	<table class="publicationtable">
+		
+<tbody>
+	<tr>
+	<td><img border="0" class="pubimg" src="http://www.eecs.harvard.edu/~kalyans/research/humandynamics/humandynamics.jpg"></td>
+	<td>
+		Generating Multimodal Human Dynamics with a Transformation based Representation<br>
+		Xinchen Yan, Akash Rastogi, Ruben Villegas, Eli Shechtman, Kalyan Sunkavalli, Sunil Hadap, Ersin Yumer, Honglak Lee
+		ECCV 2018
+	</td>
+    </tr>
+
+	<tr>
+	<td><img border="0" class="pubimg" src="http://www.eecs.harvard.edu/~kalyans/research/associationtracking/associationtracking.jpg"></td>
+	<td>
+		Automatic Adaptation of Person Association for Multiview Tracking in Group Activities<br>
+		Minh Vo, Ersin Yumer, Kalyan Sunkavalli, Sunil Hadap, Yaser Sheikh, Srinivasa Narasimhan
+		<p>
+			<a href="https://arxiv.org/abs/1805.08717">arxiv</a> | 
+			<a href="http://www.cs.cmu.edu/~ILIM/projects/IM/Association4Tracking/">project</a> | 
+			<a href="http://www.eecs.harvard.edu/~kalyans/research/associationtracking/AssociationTracking.pdf">paper</a> | 
+			<a href="https://www.youtube.com/watch?v=ZDuaJzcLcdE">video</a>
+		</p>
+	</td>
+    </tr>
+
+
+	<tr>
+	<td><img border="0" class="pubimg" src="http://www.eecs.harvard.edu/~kalyans/research/deeprelighting/deeprelighting.jpg"></td>
+	<td>
+		Deep Image-based Relighting using Optimal Sparse Samples<br>
+		Zexiang Xu, Kalyan Sunkavalli, Sunil Hadap, Ravi Ramamoorthi<br>
+		SIGGRAPH 2018
+		<p>
+		<a href="http://cseweb.ucsd.edu/~viscomp/projects/SIG18Relighting/">project</a> | 
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/deeprelighting/DeepRelighting_SIG18.pdf">paper</a> | 
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/deeprelighting/DeepRelighting_SIG18.mov">video</a> <!--| 
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/deeprelighting/DeepRelighting_SIG18_supp.pdf">supplementary</a>--> 		
+		</p>
+	</td>
+    </tr>
+	
+	<tr>
+	<td><img border="0" class="pubimg" src="http://www.eecs.harvard.edu/~kalyans/research/flashlighting/flashlighting.jpg"></td>
+	<td>
+		Illuminant Spectra-based Source Separation Using Flash Photography<br>
+		Zhuo Hui, Kalyan Sunkavalli, Sunil Hadap, Aswin C. Sankaranarayanan<br>
+		CVPR 2018 (oral)
+		<p>
+		<a href="https://arxiv.org/abs/1704.05564">arxiv</a> | 
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/flashlighting/LightEditing_CVPR18.pdf">paper</a> | 
+		<a href="https://youtu.be/7iizopNYJT0">video</a> |
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/flashlighting/LightEditing_CVPR18_supp.pdf">supplementary</a> 
+		</p>
+	</td>
+    </tr>
+	
+	<tr>
+	<td><img border="0" class="pubimg" src="http://www.eecs.harvard.edu/~kalyans/research/univariate/univariate.jpg"></td>
+	<td>
+		Reflectance Capture using Univariate Sampling of BRDFs<br>
+		Zhuo Hui, Kalyan Sunkavalli, Joon-Young Lee, Sunil Hadap, Jian Wang, Aswin C. Sankaranarayanan<br>
+		ICCV 2017
+		<p>
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/univariate/ReflectanceCaptureUnivariate_ICCV2017.pdf">paper</a> |
+		<a href="https://www.youtube.com/watch?v=G5cxEkvdUeY">video</a>
+		</p>
+	</td>
+    </tr>
+	
+	<tr>
+	<td><img border="0" class="pubimg" src="http://www.eecs.harvard.edu/~kalyans/research/portraitrelighting/portraitrelighting.png"></td>
+	<td>
+		Portrait Lighting Transfer using a Mass Transport Approach<br>
+		Zhixin Shu, Sunil Hadap, Eli Shechtman, Kalyan Sunkavalli, Sylvain Paris, Dimitris Samaras<br>
+		TOG 2017
+		<p>
+		<a href="http://www3.cs.stonybrook.edu/~cvl/content/portrait-relighting/prl.html">project</a> | 
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/portraitrelighting/PortraitRelighting_TOG2017.pdf">paper</a> | 
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/portraitrelighting/PortraitRelighting_TOG2017_supp.pdf">supplementary</a>
+		</p>
+	</td>
+    </tr>
+	
+	<tr>
+	<td><img border="0" class="pubimg" src="http://www.eecs.harvard.edu/~kalyans/research/outdoorillumination/outdoorillumination2.jpg"></td>
+	<td>
+		Deep Outdoor Illumination Estimation<br>
+		Yannick Hold-Geoffroy, Kalyan Sunkavalli, Sunil Hadap, Emiliano Gambaretto, Jean-François Lalonde<br>
+		CVPR 2017 (oral)<br>
+		<a href="https://arxiv.org/abs/1611.06403">arxiv</a> | 
+		<a href="http://vision.gel.ulaval.ca/~jflalonde/projects/deepOutdoorLight/index.html">project</a> | 
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/outdoorillumination/DeepOutdoorIllumination_CVPR2017.pdf">paper</a> | 
+		<a href="http://vision.gel.ulaval.ca/~jflalonde/projects/deepOutdoorLight/supp_mat/index.html">supplementary</a> | 
+		<a href="http://poulet.duckdns.org:8000/">demo</a>
+	</td>
+    </tr>
+
+	<tr>
+	<td><img border="0" class="pubimg" src="http://www.eecs.harvard.edu/~kalyans/research/neuralfaces/neuralfaces.jpg"></td>
+	<td>
+		Neural Face Editing with Intrinsic Image Disentangling<br>
+		Zhixin Shu, Ersin Yumer, Sunil Hadap, Kalyan Sunkavalli, Eli Shechtman, Dimitris Samaras<br>
+		CVPR 2017 (oral)
+		<p>
+		<a href="https://arxiv.org/abs/1704.04131">arxiv</a> | 
+		<a href="http://www3.cs.stonybrook.edu/~cvl/content/neuralface/neuralface.html">project</a> | 
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/neuralfaces/NeuralFaces_CVPR17.pdf">paper</a>
+		</p>
+	</td>
+    </tr>
+
+	<tr>
+	<td><img border="0" class="pubimg" src="http://www.eecs.harvard.edu/~kalyans/research/smvs/smvs.jpg"></td>
+	<td>
+		Shading-aware Multi-view Stereo<br>
+		Fabian Langguth, Kalyan Sunkavalli, Sunil Hadap, Michael Goesele<br>
+		ECCV 2016
+		<p>
+		<a href="http://www.gcc.tu-darmstadt.de/home/proj/smvs/smvs.en.jsp">project</a> | 
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/smvs/ShadingAwareMVS_ECCV16.pdf">paper</a> | 
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/smvs/ShadingAwareMVS_ECCV16_supp.pdf">supplementary</a> | 
+		<a href="https://github.com/flanggut/smvs">code</a>
+		</p>
+	</td>
+    </tr>
+
+	<tr>
+	<td><img border="0" class="pubimg" src="http://www.eecs.harvard.edu/~kalyans/research/flashwb/flashwb.jpg"></td>
+	<td>
+		White Balance under Mixed Illumination using Flash Photography<br>
+		Zhuo Hui, Aswin Sankaranarayanan, Kalyan Sunkavalli, Sunil Hadap<br>
+		ICCP 2016
+		<p>
+		<a href="https://sites.google.com/site/huizhuo1987/whitebalance">project</a> | 
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/flashwb/FlashWhiteBalance_ICCP16.pdf">paper</a>
+		</p>
+	</td>
+    </tr>
+
+	<tr>
+	<td><img border="0" class="pubimg" src="http://www.eecs.harvard.edu/~kalyans/research/portraitrelief/portraitrelief.png"></td>
+	<td>
+		High-Quality Hair Modeling from A Single Portrait Photo<br>
+		Mengelei Chai, Linjie Luo, Kalyan Sunkavalli, Nathan Carr, Sunil Hadap, Kun Zhou<br>
+		SIGGRAPH Asia 2015
+		<p>
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/portraitrelief/PortraitRelief_SIGA15.pdf">paper</a> |
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/portraitrelief/PortraitRelief_SIGA15.mp4">video</a> <br>
+		</p>
+		This work was demoed at Adobe MAX 2015 Sneaks as <a href="https://www.youtube.com/watch?v=IMUyrGFVDks">3D Portraits</a>.
+	</td>
+    </tr>
+	
+	<tr>
+	<td><img border="0" class="pubimg" src="http://www.eecs.harvard.edu/~kalyans/research/auto3d/auto3d.jpg"></td>
+	<td>
+		Automatic scene inference for 3D object compositing<br>
+		Kevin Karsch, Kalyan Sunkavalli, Sunil Hadap, Nathan Carr, Hailin Jin, Rafael Fonte, Michael Sittig, David Forsyth<br>
+		TOG 2014 <br>
+		<a href="http://kevinkarsch.com/?portfolio=automatic-scene-inference-for-3d-object-compositing">project</a> | 
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/auto3d/AutoSceneInference_TOG14.pdf">paper</a> | 
+		<a href="http://vimeo.com/101866891"> video</a> |
+		<a href="http://www.eecs.harvard.edu/~kalyans/research/auto3d/AutoSceneInference_TOG14_supplementary.pdf">supplementary</a> <br>
+		<br>
+		We <a href="https://www.youtube.com/watch?v=_cPFEANiLTA">demoed</a> our work as part of Adobe MAX 2014 Sneaks.
+	</td>
+    </tr>
+
+</tbody>
+</table>
+</div>
+	
+</body>
+</html>
