Roboto, Roboto Slab fonts.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html>
 <head>
 
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<link href="http://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-	
 <meta charset="UTF-8">
 <title>Sunil Hadap</title>
 <link href="main.css" rel="stylesheet" type="text/css">
@@ -28,17 +25,17 @@
 
 			  <p><table  cellspacing="0" cellpadding="0"><tr><td>sunilhadap</td><td>@</td><td>gmail</td><td>.</td><td>com</td></tr></table></p>
 
-			  <table id="social-table">
+			  <table class="socialtable">
 				  <tbody>
 					  <tr>
 						  <td>
 							  <img src="https://png.icons8.com/ios-glyphs/50/000000/graduation-cap.png" height="24px">
 						  </td>
 						  <td>
-							  &nbsp; <img src="https://png.icons8.com/ios/50/000000/linkedin-filled.png" height="24px">
+							  <img src="https://png.icons8.com/ios/50/000000/linkedin-filled.png" height="24px">
 						  </td>
 						  <td>
-							<img src="https://png.icons8.com/ios-glyphs/50/000000/parse-from-clipboard.png" height="24px">
+							  <img src="https://png.icons8.com/ios-glyphs/50/000000/parse-from-clipboard.png" height="24px">
 						  </td>
 					  </tr>
 				  </tbody>
