--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			  <h1>Sunil Hadap</h1>
 
 			  <p>Principal Scientist, Adobe, San Jose, CA<br>
-			  CG, CV, AI - Researcher, Practitionar</p>
+			  CG, CV, AI - Researcher, Practitioner</p>
 
 			  <p><table  cellspacing="0" cellpadding="0"><tr><td>sunilhadap</td><td>@</td><td>gmail</td><td>.</td><td>com</td></tr></table></p>
 
