Added resume, linkedin, google scholar links.

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 				  <tbody>
 					  <tr>
 						  <td>
-							  <img src="https://png.icons8.com/ios-glyphs/50/000000/graduation-cap.png" height="24px">
+							  <a href="https://scholar.google.com/citations?hl=en&amp;user=4g-njrYAAAAJ"><img src="https://png.icons8.com/ios-glyphs/50/000000/graduation-cap.png" height="24px"></a>
 						  </td>
 						  <td>
-							  <img src="https://png.icons8.com/ios/50/000000/linkedin-filled.png" height="24px">
+							  <a href="https://www.linkedin.com/in/sunil-hadap-0562211"><img src="https://png.icons8.com/ios/50/000000/linkedin-filled.png" height="24px"></a>
 						  </td>
 						  <td>
-							  <img src="https://png.icons8.com/ios-glyphs/50/000000/parse-from-clipboard.png" height="24px">
+							  <a href="sunil-resume-2018.pdf"><img src="https://png.icons8.com/ios-glyphs/50/000000/parse-from-clipboard.png" height="24px"></a>
 						  </td>
 					  </tr>
 				  </tbody>
@@ -62,13 +62,22 @@
 		<li>Principal Scientist, Adobe Dec 2015 – till date<br>
 			Senior Research Scientist, Adobe Nov 2006 – Nov 2015<br>
 			Senior Research Manager (Emerging Graphics Technology Group), Adobe Aug 2007 – Aug 2012</li>
-		<li>R&amp;D Staff – simulation, PDI/DreamWorks, USA, Feb 2003 – Oct 2006</li>
+		<li>R&amp;D Staff – Simulation, PDI/DreamWorks, USA, Feb 2003 – Oct 2006</li>
 		<li>Research Assistant (MESH Project), MIRALab, University of Geneva, Jan 2000 – Jan 2003<br>
 			Research Scientist (Unilever Project), MIRALab, University of Geneva, Jan 2000 – Dec 2001</li>
 		<li>Project Leader, Tata Elxsi (India) Ltd., Bangalore, India, Nov 1996 – Jul 1998<br>
 			Senior Engineer (Systems Solution, VR), Tata Elxsi (India) Ltd., Bangalore, India, Sep 1995 – Oct 1996</li>
 	</ul>	
 </div>
+
+<!---
+<div class="section">
+<h2>Tech-transfers</h2>
+	<ul>
+		<li>Dynamic Strand Primitive, used for hair simulation and folliage simulation in DreamWorks movies</li>
+	</ul>
+</div>
+--->
 
 <div class="section">
 <h2>Credits</h2>
@@ -81,7 +90,7 @@
 	<li>Adobe Photoshop (multiple)</li>
 	<li>Adobe Illustrator (multiple)</li>
 	<li>Adobe Photoshop Express, Adobe Photoshop Elements (multiple)</li>
-	<li>Adobe Dimension 2017</li>
+	<li>Adobe Dimension, 2017</li>
 	</ul>
 </div>
 	
@@ -94,7 +103,7 @@
 	<td><img border="0" class="pubimg" src="http://www.eecs.harvard.edu/~kalyans/research/humandynamics/humandynamics.jpg"></td>
 	<td>
 		Generating Multimodal Human Dynamics with a Transformation based Representation<br>
-		Xinchen Yan, Akash Rastogi, Ruben Villegas, Eli Shechtman, Kalyan Sunkavalli, Sunil Hadap, Ersin Yumer, Honglak Lee
+		Xinchen Yan, Akash Rastogi, Ruben Villegas, Eli Shechtman, Kalyan Sunkavalli, Sunil Hadap, Ersin Yumer, Honglak Lee<br>
 		ECCV 2018
 	</td>
     </tr>
